# fast-fs-hash

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  biome.json  build-hash.json  lefthook.yml  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  typedoc.json  vitest.config.ts
.github/workflows/: ci.yml  docs.yml  smoke-test.yml
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: LICENSE  README.md  package.json
npm/fast-fs-hash-node-darwin-arm64/: README.md  package.json
npm/fast-fs-hash-node-darwin-x64/: README.md  package.json
npm/fast-fs-hash-node-freebsd-arm64/: README.md  package.json
npm/fast-fs-hash-node-freebsd-x64/: README.md  package.json
npm/fast-fs-hash-node-linux-arm64-gnu/: README.md  package.json
npm/fast-fs-hash-node-linux-arm64-musl/: README.md  package.json
npm/fast-fs-hash-node-linux-x64-gnu/: README.md  package.json
npm/fast-fs-hash-node-linux-x64-musl/: NOTICES.md  README.md  package.json
npm/fast-fs-hash-node-win32-arm64-msvc/: README.md  package.json
npm/fast-fs-hash-node-win32-x64-msvc/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
scripts/: build-all.js  build-hash.js  build-native.js  build-readme.js  build-ts.js  build-wasm.js  build.js  find-wasm.js  package-platforms.js  prepare.js  prepublish.js  prune-test-imports.js  run-bench.js  run-test.js  update-benchmarks.js  update-versions.js  update-xxhash.sh
scripts/lib/: utils.js
test/: _child-process-helper.mjs  _worker-thread-helper.mjs  encode-decode.test.d.ts  encode-decode.test.ts  file-hash-cache.test.ts  hash.test.d.ts  hash.test.ts  keyed-lock.test.ts  process-lock-cross.test.ts  process-lock.test.ts  tsconfig.json  worker-threads.test.ts  xxhash128.test.d.ts  xxhash128.test.ts
test/bench/: file-hash-cache-serialize.bench.ts  file-hash-cache-validate-serialize-many.bench.ts  file-hash-cache-validate-serialize.bench.ts  file-hash-cache-validate.bench.ts  file-hash-cache-write-new.bench.ts  file-hash-cache-write-plain.bench.ts  files-equal.bench.ts  find-nearest-project-files.bench.ts  find-project-root.bench.ts  generate-raw-data.cjs  hash-buffer.bench.ts  hashfile.bench.ts  hashfiles.bench.d.ts  hashfiles.bench.ts  lock.bench.ts  lz4-read-and-compress.bench.ts  lz4.bench.ts
test/bench/hashing/: buffer-digest.bench.ts  stream.bench.ts  string-and-file.bench.ts
test/encode-decode/: decode.test.ts  encode.test.ts  hex.test.ts  iterate.test.ts  roundtrip.test.ts
test/file-hash-cache/: _child-lock-utils.ts  _fixture-utils.ts  abort-signal.test.ts  api-compat.test.ts  auto-root-path.test.ts  auto-root.test.ts  basics.test.ts  binary-format.test.ts  change-detection.test.ts  change-tracking.test.ts  flows-constructor.test.ts  flows-open-write.test.ts  flows-reuse-state.test.ts  flows-watch.test.ts  flows.test.ts  format-mismatch.test.ts  io-and-edge.test.ts  is-locked.test.ts  lifecycle.test.ts  lock-cancellation.test.ts  lock-nonblocking.test.ts  lock-release.test.ts  lock-timeout.test.ts  lock-write-fallback.test.ts  locking.test.ts  open-header.test.ts  resolve.test.ts  serialization.test.ts  setfiles-rootpath.test.ts  thread-pool-trim.test.ts  wait-unlocked-cross-process.test.ts  wait-unlocked.test.ts  write-new.test.ts
test/file-hash-cache-format/: core-format.test.ts  file-list-changes.test.ts  remap-cases.test.ts
test/files-equal/: files-equal.test.ts
test/find-project-root/: find-nearest-project-files.test.ts  find-project-root.test.ts
test/fixtures/hash-fixture/: .gitattributes  unicode.txt
test/hash/: cross-implementation.test.ts  digest-file-hex.test.ts  persistent-fixtures.test.ts
test/lz4/: lz4-read-and-compress.test.ts  lz4.test.ts
test/path-utils/: find-common-root-path.test.ts
test/smoke-test/: README.md  package.json  smoke-test.mjs
test/xxhash128/: _helpers.ts  _helpers_new.ts  core.test.ts  digest-buffer.test.ts  digest-file.test.ts  digest-files.test.ts  digest-functions.test.ts  digest-string.test.ts  edge-cases.test.ts  error-recovery.test.ts  hash-file-handle.test.ts  hash-file.test.ts  hash-files-bulk.test.ts  stream-busy.test.ts  stream.test.ts  unbound-static.test.ts  verify-files.test.ts
